pom cleanup : remove failsafe-plugin sections and put the config where necessary